# Sparky

./: .ansible-lint  .env.example  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .pre-commit-config.yaml  .yamllint  AGENTS.md  PLAN.md  README.md  ansible.cfg
.cursor/rules/: 01-sparky-mission-and-plan.mdc  02-python-fastapi-services.mdc  03-ansible-docker-shell.mdc  04-secrets-redaction-ci.mdc  99-agent-behavior.mdc
.github/workflows/: ci.yml
collections/: requirements.yml
config/: api-contract.yaml  logging.yaml  model-registry.yaml  sparky.env.example
config/logrotate.d/: sparky
config/prometheus/: sparky-scrape.example.yml
docker/compose/: docker-compose.gateway.yml  (+2 more)
docs/: agentic-rag.md  api-contract.md  architecture.md  audio.md  benchmark-results.md  coding.md  media.md  monitoring.md  nemotron.md  operations.md  troubleshooting.md
inventory/: hosts.yml
playbooks/: 00-preflight.yml  10-base-os.yml  110-monitoring.yml  20-storage.yml  30-container-runtime.yml  40-nvidia-validation.yml  join-k3s.yml
scripts/: check-gpu.sh  download-nemotron-parser.sh  preflight.sh  smoke-test-audio.sh  smoke-test-coding.sh  smoke-test-health.sh  smoke-test-media.sh  smoke-test-monitoring.sh  smoke-test-text.sh  start-gateway.sh  start-monitoring.sh  start-nemotron-trtllm.sh  start-nemotron-vllm.sh
services/sparky-common/: README.md  pyproject.toml
services/sparky-common/src/sparky_common/: __init__.py  logging_filters.py
services/sparky-gateway/: Dockerfile  README.md  pyproject.toml
services/sparky-gateway/src/sparky_gateway/: __init__.py  agentic_rag_routes.py  audio_routes.py  auth.py  chat_routes.py  coding_routes.py  config.py  errors.py  health.py  job_store.py  jobs_routes.py  logging_setup.py  main.py  media_routes.py  metrics.py  models_routes.py  reasoning_routes.py  registry.py  request_id.py  request_limits.py
services/sparky-gateway/tests/: conftest.py  test_agentic_rag.py  test_audio.py  test_auth.py  test_chat_completions.py  test_coding.py  test_errors.py  test_health.py  test_job_store.py  test_jobs.py  test_media.py  test_metrics.py  test_models.py  test_reasoning.py
(+18 files in other folders)
